activity_login.xml and splash Screen with splashScreen Styles.xml First Commit after Restarting the project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="collaborate_and_plan__">Collaborate and plan togather accroess multiple devices on project manager minimaliest interface</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="login_screen_project_manager_image">Login screen project manager image</string>
 </resources>
