--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="login_screen_project_manager_image">Login screen project manager image</string>
+
+    
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_your_name_id____">Enter your name, email and password to register with us</string>
+    <string name="enter_you_name">Enter you name</string>
+    <string name="enter_your_email_address">Enter your email address</string>
+    <string name="enter_a_strong_password">Enter a strong password</string>
+    <string name="welcome_to_login_activity">welcome to login activity</string>
 </resources>
