--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,24 @@
     <string name="sign_up">Sign Up</string>
     <string name="login_screen_project_manager_image">Login screen project manager image</string>
 
-    
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="enter_your_name_id____">Enter your name, email and password to register with us</string>
     <string name="enter_you_name">Enter you name</string>
     <string name="enter_your_email_address">Enter your email address</string>
     <string name="enter_a_strong_password">Enter a strong password</string>
     <string name="welcome_to_login_activity">welcome to login activity</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="enter_you_email_and_password_to_login">Enter you email and password to login with us</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="if_you_already_have_an_account">If you already have an account</string>
+    <string name="sing_in_instead"><u>Sing in instead</u></string>
 </resources>
