--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="login">Login</string>
     <string name="home">Home</string>
+    <string name="please_wait">Please Wait</string>
 </resources>
