--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="login">Login</string>
     <string name="home">Home</string>
     <string name="please_wait">Please Wait</string>
+    <string name="loading">Loading</string>
 </resources>
